HelloUltraviolet/Fixtures/RejectedSource/Patterns/TupleRecordPatternsDiagnostic/Expected.uv
//! Expected diagnostic metadata for the TupleRecordPatternsDiagnostic rejected-source specimen.

expectedDiagnostic("", "diag.17.TupleRecordPatterns")
